--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,16 @@
       <artifactId>expressly</artifactId>
       <version>${expressly.version}</version>
     </dependency>
-
   </dependencies>
 
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>  <!-- Musí se shodovat s ID v settings.xml -->
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>  <!-- Musí se shodovat s ID v settings.xml -->
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
 </project>
