--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.fiserro</groupId>
   <artifactId>options</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.1-SNAPSHOT</version>
   <name>Application Options Library</name>
   <description>A type-safe configuration library for Java that supports validation using Jakarta
     Bean Validation.
@@ -30,7 +32,6 @@
     <url>https://github.com/fiserro/options</url>
     <connection>scm:git:https://github.com/fiserro/options.git</connection>
     <developerConnection>scm:git:ssh://github.com:fiserro/options.git</developerConnection>
-    <tag>options-0.0.1</tag>
   </scm>
 
   <properties>
