[maven-release-plugin] rollback the release of options-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,7 @@
   <scm>
     <url>https://github.com/fiserro/options</url>
     <connection>scm:git:https://github.com/fiserro/options.git</connection>
-    <developerConnection>scm:git:git@github.com:fiserro/options.git</developerConnection>
-    <tag>HEAD</tag>
+    <developerConnection>scm:git:ssh://github.com:fiserro/options.git</developerConnection>
   </scm>
 
   <properties>
