--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
 
   <scm>
     <url>https://github.com/fiserro/options</url>
-    <connection>scm:git:https://github.com/fiserro/options.git</connection>
-    <developerConnection>scm:git:ssh://github.com:fiserro/options.git</developerConnection>
+    <connection>scm:git:git://github.com/fiserro/options.git</connection>
+    <developerConnection>scm:git:git@github.com:fiserro/options.git</developerConnection>
   </scm>
 
   <properties>
