--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.github.fiserro</groupId>
   <artifactId>options</artifactId>
-  <version>0.0.3</version>
+  <version>0.0.4-SNAPSHOT</version>
   <name>Application Options Library</name>
   <description>A type-safe configuration library for Java that supports validation using Jakarta
     Bean Validation.
