[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.github.fiserro</groupId>
   <artifactId>options</artifactId>
-  <version>1.0.0-rc1</version>
+  <version>1.0.0-rc2-SNAPSHOT</version>
   <name>Application Options Library</name>
   <description>A type-safe configuration library for Java that supports validation using Jakarta
     Bean Validation.
