--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <url>https://github.com/fiserro/options</url>
     <connection>scm:git:git://github.com/fiserro/options.git</connection>
     <developerConnection>scm:git:git@github.com:fiserro/options.git</developerConnection>
-    <tag>options-1.0.0-rc1</tag>
+    <tag>options-1.0.0</tag>
   </scm>
 
   <properties>
